--- a/web/index.html
+++ b/web/index.html
@@ -37,14 +37,30 @@
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
-    <script src="https://zalo-mini-app-mediatool.web.app/assets/ffmpeg/ffmpeg.min.js"
-            crossorigin="anonymous" async></script>
+    <script src="https://quoc67k1-profile.web.app/assets/ffmpeg/ffmpeg.min.js" crossorigin="anonymous"
+            async></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"
             crossorigin="anonymous"></script>
     <script>
-        function webSaveAs(blob, name) {
-            saveAs(blob, name);
-        }
+<!--        (function() {-->
+<!--      const isLocal = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';-->
+
+<!--      // Simplified CSP for better performance-->
+<!--      const cspContent = isLocal-->
+<!--        ? "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https: data: blob:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https: blob:; font-src 'self' data: https:; connect-src 'self' https: wss: ws: http://127.0.0.1:* http://localhost:* blob:; frame-src 'self' https:; media-src 'self' blob: data:; worker-src 'self' blob:; child-src 'self' blob:; object-src 'none';"-->
+<!--        : "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://www.googletagmanager.com https://www.gstatic.com blob:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com blob:; img-src 'self' data: https: blob:; font-src 'self' data: https://fonts.gstatic.com blob:; connect-src 'self'  https://cdnjs.cloudflare.com https://unpkg.com  https://cdn.jsdelivr.net https://www.googletagmanager.com https://fonts.googleapis.com https://fonts.gstatic.com https://www.gstatic.com https://lottie.host https://*.amazonaws.com https://*.cloudfront.net https://*.allorigins.win https://*.codetabs.com https://corsproxy.io https://*.freeboard.io wss: ws: blob:; frame-src 'self'  https://cdnjs.cloudflare.com https://unpkg.com  blob:; media-src 'self' blob: data:; worker-src 'self' blob:; child-src 'self' blob:; object-src 'none';";-->
+
+<!--      // Create and insert CSP meta tag-->
+<!--      const cspMeta = document.createElement('meta');-->
+<!--      cspMeta.setAttribute('http-equiv', 'Content-Security-Policy');-->
+<!--      cspMeta.setAttribute('content', cspContent);-->
+
+<!--      // Insert CSP as first meta tag for better performance-->
+<!--      document.head.insertBefore(cspMeta, document.head.firstChild);-->
+<!--    })();-->
+      function webSaveAs(blob, name) {
+          saveAs(blob, name);
+      }
     </script>
 </head>
 <body>
