--- a/web/index.html
+++ b/web/index.html
@@ -24,8 +24,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="flutter_portfolio">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
-<!--    <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">-->
-<!--    <meta http-equiv="Cross-Origin-Embedder-Policy" content="same-origin">-->
+    <!--    <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin">-->
+    <!--    <meta http-equiv="Cross-Origin-Embedder-Policy" content="same-origin">-->
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png"/>
 
@@ -38,30 +38,9 @@
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
-    <script src="/assets/ffmpeg/ffmpeg.min.js" crossorigin="anonymous" async></script>
+    <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.11.6/dist/ffmpeg.min.js" crossorigin="anonymous" async></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"
             crossorigin="anonymous"></script>
-    <script>
-        <!--        (function() {-->
-        <!--      const isLocal = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';-->
-
-        <!--      // Simplified CSP for better performance-->
-        <!--      const cspContent = isLocal-->
-        <!--        ? "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https: data: blob:; style-src 'self' 'unsafe-inline' https:; img-src 'self' data: https: blob:; font-src 'self' data: https:; connect-src 'self' https: wss: ws: http://127.0.0.1:* http://localhost:* blob:; frame-src 'self' https:; media-src 'self' blob: data:; worker-src 'self' blob:; child-src 'self' blob:; object-src 'none';"-->
-        <!--        : "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://www.googletagmanager.com https://www.gstatic.com blob:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com blob:; img-src 'self' data: https: blob:; font-src 'self' data: https://fonts.gstatic.com blob:; connect-src 'self'  https://cdnjs.cloudflare.com https://unpkg.com  https://cdn.jsdelivr.net https://www.googletagmanager.com https://fonts.googleapis.com https://fonts.gstatic.com https://www.gstatic.com https://lottie.host https://*.amazonaws.com https://*.cloudfront.net https://*.allorigins.win https://*.codetabs.com https://corsproxy.io https://*.freeboard.io wss: ws: blob:; frame-src 'self'  https://cdnjs.cloudflare.com https://unpkg.com  blob:; media-src 'self' blob: data:; worker-src 'self' blob:; child-src 'self' blob:; object-src 'none';";-->
-
-        <!--      // Create and insert CSP meta tag-->
-        <!--      const cspMeta = document.createElement('meta');-->
-        <!--      cspMeta.setAttribute('http-equiv', 'Content-Security-Policy');-->
-        <!--      cspMeta.setAttribute('content', cspContent);-->
-
-        <!--      // Insert CSP as first meta tag for better performance-->
-        <!--      document.head.insertBefore(cspMeta, document.head.firstChild);-->
-        <!--    })();-->
-              function webSaveAs(blob, name) {
-                  saveAs(blob, name);
-              }
-    </script>
 </head>
 <body>
 <div id="loader">
@@ -235,5 +214,5 @@
   }
 }
 </style>
-</body>
-</html>
+
+<!-- Start of TX.Chat Widget code --><script>(function(w,d){w.__chatSDK=w.__chatSDK||{};w.__chatSDK.params={license:'20250716061637-ognRngEfQiBi2UAwxnxY_g==',signature:'K8upoxYWyBGXNJsB3lARDBU5psaftZuQrMHiqW1eV0c='};var ChatSDK=w.ChatSDK=w.ChatSDK||{_q:[],_loaded:false,push:function(fn){this._loaded?fn():this._q.push(fn)},init:function(){var container=d.createElement('div');container.id='chat-container';d.body.appendChild(container);var script=d.createElement('script');script.async=true;script.src='https://stage-chat-sdk.textedge.net/bundle.js';script.onload=function(){ChatSDK._loaded=true;w.ChatSDK.renderChat('chat-container',w.__chatSDK.params);ChatSDK._q.forEach(function(fn){fn()})};d.head.appendChild(script)}};if(d.readyState==='complete'){ChatSDK.init()}else{w.addEventListener('load',ChatSDK.init)}})(window,document);</script><noscript><a href="https://textedge.net/chat" rel="nofollow">Chat with us</a>, powered by <a href="https://textedge.net" rel="noopener nofollow" target="_blank">TX.Chat</a></noscript><!-- End of TX.Chat Widget code --></html>
